--- a/style.scss
+++ b/style.scss
@@ -2,5 +2,5 @@
 // Base document colors
 $link-color: #ba1e2b;
 $link-hover-color: #570809;
-$code-block-bg-color: #dddddd;
+$code-block-bg-color: #edeef0;
 
